services/demo-v57/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-v57
  labels:
    name: demo-v57
    app: demo-v57-api
