services/demo-v57/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-v57
  namespace: demo-v57
  labels:
    app: demo-v57
    version: v1.0.0
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: demo-v57
  template:
    metadata:
      labels:
        app: demo-v57
        version: v1.0.0
      annotations:
        argocd.argoproj.io/sync-wave: "0"
        timestamp: "1760412063"
        deployment.kubernetes.io/revision: "1"
    spec:
      containers:
      - name: demo-v57
        image: ghcr.io/ductri09072004/demo-v57:main-5200a371bb085175960c88ca5fc452dc94f922ff7f8184692377ab962bddc8b9a42232af9f7f654b
        imagePullPolicy: Always
        ports:
        - containerPort: 5001
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /api/health
            port: 5001
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/health
            port: 5001
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
