services/demo-v57/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-v57-service
  namespace: demo-v57
  labels:
    app: demo-v57
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: demo-v57
